src/objects/Courier1__Courier_Schedule__c.object
<CustomObject>
    <description>Stores Courier Schedules, which are examined and processed by the Courier Server</description>
    <fields>
        <fullName>Courier1__Approx_Executions_Per_Month__c</fullName>
        <inlineHelpText>This value is computed by the Courier Server</inlineHelpText>
        <label>Approx. Executions Per Month</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courier1__Attachment_Extension__c</fullName>
        <inlineHelpText>If you&apos;re sending to PCs, Macs or Blackberries, choose &quot;.xls&quot;. For Pocket PCs, choose &quot;.html&quot;.</inlineHelpText>
        <label>Attachment Extension</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Export_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>.xls</fullName>
                    <default>true</default>
                    <label>.xls</label>
                </value>
                <value>
                    <fullName>.html</fullName>
                </value>
                <value>
                    <fullName>.csv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Courier1__Don_t_Run_on_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Run on Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courier1__Don_t_Send_if_Report_Has_No_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Send if Report Has No Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courier1__Email_Body__c</fullName>
        <description>You may enter plain text (or an HTML snippet if you&apos;ve enabled HTML emails on the Setup tab) to explain the nature of the report you&apos;re sending.</description>
        <inlineHelpText>Enter plain text or an HTML snippet (if you&apos;ve enabled HTML emails on the Setup tab).</inlineHelpText>
        <label>Email Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Courier1__Email_Format__c</fullName>
        <label>Email Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                    <default>true</default>
                    <label>HTML</label>
                </value>
                <value>
                    <fullName>Plain Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Email_Reply_To_Address__c</fullName>
        <label>Email Reply To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Email_Reply_To_Name__c</fullName>
        <label>Email Reply To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Email_Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this to override the default sender of the message as defined on the Setup page.</inlineHelpText>
        <label>Email Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000021PYlEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier1__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courier1__Export_Type__c</fullName>
        <inlineHelpText>Sets the type of report export. Printable View is formatted with groupings and colors. Excel has no groupings but column-filters. CSV is the raw data from the report. (If not specified, the default choice is Printable View.)</inlineHelpText>
        <label>Export Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Printable View</fullName>
                    <default>true</default>
                    <label>Printable View</label>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Last_Run_Date_Display__c</fullName>
        <formula>Courier1__Last_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courier1__Last_Run_Date__c</fullName>
        <label>Last Run Date Edit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courier1__Last_Run_Status__c</fullName>
        <label>Last Run Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Merge_Output_File_Type__c</fullName>
        <label>Merge Output File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same as Template</fullName>
                    <default>true</default>
                    <label>Same as Template</label>
                </value>
                <value>
                    <fullName>Adobe Acrobat PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Merge_Template_Id_Display__c</fullName>
        <formula>Courier1__Merge_Template_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Merge_Template_Id__c</fullName>
        <label>Merge Template Id Edit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Merge_Template_Name_Display__c</fullName>
        <formula>Courier1__Merge_Template_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Merge_Template_Name__c</fullName>
        <label>Merge Template Name Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Monthly_Day_of_the_Week__c</fullName>
        <label>Monthly Day of the Week</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Trigger_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Next_Run_Date__c</fullName>
        <inlineHelpText>Hint: After updating the trigger schedule, clear this field to force the Courier Server to re-evaluate the Next Run Date during the next processing run.</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courier1__Queued_Run_Date_Display__c</fullName>
        <formula>Courier1__Queued_Run_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queued To Run At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courier1__Queued_Run_Date__c</fullName>
        <label>Queued To Run At Edit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courier1__Ready_to_Fire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courier1__Recipient_Source__c</fullName>
        <label>Recipient Source (EE/UE only)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Run_As__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule Record</fullName>
                    <default>true</default>
                    <label>Schedule Record</label>
                </value>
                <value>
                    <fullName>&quot;User to Send As&quot; from Outbound Message(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Report_Display__c</fullName>
        <label>Report Display</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Export_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Display as an attachment</fullName>
                    <default>true</default>
                    <label>Display as an attachment</label>
                </value>
                <value>
                    <fullName>Display inline within message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Report_Folder_Display__c</fullName>
        <formula>Courier1__Report_Folder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Folder__c</fullName>
        <label>Report Folder Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Id_Display__c</fullName>
        <formula>Courier1__Report_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Id__c</fullName>
        <description>The id of the report to schedule.</description>
        <label>Report Id Edit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Name_Display__c</fullName>
        <formula>Courier1__Report_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Name_Report_Id__c</fullName>
        <formula>Trim( Courier1__Report_Name__c &amp; &quot; &quot; &amp; Courier1__Report_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name + Report Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Name__c</fullName>
        <defaultValue>&quot;Please select a report by clicking the &apos;Select Report&apos; link.&quot;</defaultValue>
        <label>Report Name Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Report_Parameter__c</fullName>
        <description>The value of this field is passed to the pv0 location in the report&apos;s Advanced Filters</description>
        <inlineHelpText>The value of this field is passed to the pv0 location in the report&apos;s Advanced Filters</inlineHelpText>
        <label>Report Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Run_As__c</fullName>
        <description>For Enterprise and Unlimited Editions:
By using a Workflow Rule and Outbound Message, you can control the identity under which the report is executed.</description>
        <label>Run As (EE/UE only)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier Setup Credentials</fullName>
                    <default>true</default>
                    <label>Courier Setup Credentials</label>
                </value>
                <value>
                    <fullName>&quot;User to Send As&quot; from Outbound Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Schedule_Title__c</fullName>
        <label>Schedule Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Start_Hour__c</fullName>
        <label>First Run Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Trigger_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>04:00 PM</fullName>
                </value>
                <value>
                    <fullName>05:00 PM</fullName>
                </value>
                <value>
                    <fullName>06:00 PM</fullName>
                </value>
                <value>
                    <fullName>07:00 PM</fullName>
                </value>
                <value>
                    <fullName>08:00 PM</fullName>
                </value>
                <value>
                    <fullName>09:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Stop_Hour__c</fullName>
        <label>Last Run Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Start_Hour__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>04:00 PM</fullName>
                </value>
                <value>
                    <fullName>05:00 PM</fullName>
                </value>
                <value>
                    <fullName>06:00 PM</fullName>
                </value>
                <value>
                    <fullName>07:00 PM</fullName>
                </value>
                <value>
                    <fullName>08:00 PM</fullName>
                </value>
                <value>
                    <fullName>09:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Trigger_Hourly_Interval__c</fullName>
        <label>Run Every X Hour(s)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Trigger_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Trigger_Interval__c</fullName>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>More than once a day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Trigger_Run_Day__c</fullName>
        <label>Day to Run On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Trigger_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__Trigger_Run_Time__c</fullName>
        <label>Hour to Run On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Courier1__Trigger_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>04:00 PM</fullName>
                </value>
                <value>
                    <fullName>05:00 PM</fullName>
                </value>
                <value>
                    <fullName>06:00 PM</fullName>
                </value>
                <value>
                    <fullName>07:00 PM</fullName>
                </value>
                <value>
                    <fullName>08:00 PM</fullName>
                </value>
                <value>
                    <fullName>09:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier1__User_Location_Id__c</fullName>
        <label>User Location Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courier1__Version__c</fullName>
        <formula>&quot;1.0&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <label>Courier Schedule</label>
    <listViews>
        <fullName>Courier1__All</fullName>
        <columns>NAME</columns>
        <columns>Courier1__Schedule_Title__c</columns>
        <columns>Courier1__Report_Name_Display__c</columns>
        <columns>Courier1__Last_Run_Date_Display__c</columns>
        <columns>Courier1__Next_Run_Date__c</columns>
        <columns>Courier1__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Courier1__AllEnabled</fullName>
        <columns>NAME</columns>
        <columns>Courier1__Schedule_Title__c</columns>
        <columns>Courier1__Report_Name_Display__c</columns>
        <columns>Courier1__Last_Run_Date_Display__c</columns>
        <columns>Courier1__Next_Run_Date__c</columns>
        <columns>Courier1__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Courier1__Enabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Enabled</label>
    </listViews>
    <listViews>
        <fullName>Courier1__LastRunasFailure</fullName>
        <columns>NAME</columns>
        <columns>Courier1__Schedule_Title__c</columns>
        <columns>Courier1__Report_Name_Display__c</columns>
        <columns>Courier1__Last_Run_Date_Display__c</columns>
        <columns>Courier1__Next_Run_Date__c</columns>
        <columns>Courier1__Last_Run_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Courier1__Last_Run_Status__c</field>
            <operation>contains</operation>
            <value>Failure</value>
        </filters>
        <label>Last Run as Failure</label>
    </listViews>
    <listViews>
        <fullName>Courier1__ScheduledforToday</fullName>
        <columns>NAME</columns>
        <columns>Courier1__Schedule_Title__c</columns>
        <columns>Courier1__Report_Name_Display__c</columns>
        <columns>Courier1__Last_Run_Date_Display__c</columns>
        <columns>Courier1__Next_Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Courier1__Next_Run_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Scheduled for Today</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Courier1__Validate_Dont_Run_On_Weekends</fullName>
        <active>true</active>
        <errorConditionFormula>if(
AND(
IsPickVal( Courier1__Trigger_Interval__c , &quot;Weekly&quot;) ,

Courier1__Don_t_Run_on_Weekends__c,

OR(
IsPickVal( Courier1__Trigger_Run_Day__c, &quot;Saturday&quot;),
IsPickVal( Courier1__Trigger_Run_Day__c, &quot;Sunday&quot;)
)
),
true, false)</errorConditionFormula>
        <errorDisplayField>Courier1__Don_t_Run_on_Weekends__c</errorDisplayField>
        <errorMessage>This setting won&apos;t work with your current interval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Courier1__Validate_Hour_to_Run_On</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(

OR( ISPICKVAL( Courier1__Trigger_Interval__c , &quot;Daily&quot;),
ISPICKVAL( Courier1__Trigger_Interval__c , &quot;Weekly&quot;),
ISPICKVAL( Courier1__Trigger_Interval__c, &quot;Monthly&quot;) ),

ISPICKVAL( Courier1__Trigger_Run_Time__c, &quot;&quot; )),
True , False )</errorConditionFormula>
        <errorDisplayField>Courier1__Trigger_Run_Time__c</errorDisplayField>
        <errorMessage>For the interval chosen, you must also choose a Hour to Run On.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Courier1__Validate_Monthly_DOW</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(

ISPICKVAL( Courier1__Trigger_Interval__c, &quot;Monthly&quot;) ,

OR(
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 1st ...&quot;) ,
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 2nd ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 3rd ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 4th ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the last ...&quot;)) ,

ISPICKVAL(  Courier1__Monthly_Day_of_the_Week__c , &quot;&quot; )),
True , False )</errorConditionFormula>
        <errorDisplayField>Courier1__Monthly_Day_of_the_Week__c</errorDisplayField>
        <errorMessage>For the interval chosen, you must also choose a Monthly Day of the Week.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Courier1__Validate_Monthly_DOW_2</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(

ISPICKVAL( Courier1__Trigger_Interval__c, &quot;Monthly&quot;) ,

!OR(
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 1st ...&quot;) ,
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 2nd ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 3rd ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the 4th ...&quot;),
  ISPICKVAL( Courier1__Trigger_Run_Day__c, &quot;the last ...&quot;)) ,

!ISPICKVAL(  Courier1__Monthly_Day_of_the_Week__c , &quot;&quot; )),
True , False )</errorConditionFormula>
        <errorDisplayField>Courier1__Monthly_Day_of_the_Week__c</errorDisplayField>
        <errorMessage>For the interval chosen, you may not choose a Monthly Day of the Week.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Courier1__Validate_Next_Run_Date</fullName>
        <active>true</active>
        <description>Ensures that the &quot;minutes&quot; portion is the top of an hour, ie, &quot;:00&quot;</description>
        <errorConditionFormula>IF
(
AND
(
TEXT( Courier1__Next_Run_Date__c ) &lt;&gt; &quot;&quot;,

MID( TEXT(Courier1__Next_Run_Date__c), 14, 3) &lt;&gt; &quot;:00&quot;
) ,
true, false
)</errorConditionFormula>
        <errorDisplayField>Courier1__Next_Run_Date__c</errorDisplayField>
        <errorMessage>The &quot;minutes&quot; part must be &quot;:00 AM&quot; or &quot;:00 PM&quot;. For example, &quot;10:00 AM&quot; is valid, but &quot;10:07 AM&quot; is not.</errorMessage>
    </validationRules>
</CustomObject>